@@ -236,7 +236,7 @@ use constant PARAM_WHERE_MAP => {
       desk_id               => 'mt.desk__id = ?',
       name                  => 'LOWER(i.name) LIKE LOWER(?)',
       subelement_key_name   => 'i.id = mct.object_instance_id AND mct.element_type__id = subet.id AND LOWER(subet.key_name) LIKE LOWER(?)',
-      subelement_id         => 'i.id = sme.object_instance_id AND sme.element_type__id = ?',
+      subelement_id         => 'i.id = sme.object_instance_id AND sme.active = TRUE AND sme.element_type__id = ?',
       related_story_id      => 'i.id = mctrs.object_instance_id AND mctrs.related_story__id = ?',
       related_media_id      => 'i.id = mctrm.object_instance_id AND mctrm.related_media__id = ?',
       data_text             => 'LOWER(md.short_val) LIKE LOWER(?) AND md.object_instance_id = i.id',
@@ -300,7 +300,7 @@ use constant PARAM_ANYWHERE_MAP => {
                                 'LOWER(e.key_name) LIKE LOWER(?)' ],
     subelement_key_name    => [ 'i.id = mct.object_instance_id AND mct.element_type__id = subet.id',
                                 'LOWER(subet.key_name) LIKE LOWER(?)' ],
-    subelement_id          => [ 'i.id = sme.object_instance_id',
+    subelement_id          => [ 'i.id = sme.object_instance_id AND sme.active = TRUE',
                                 'sme.element_type__id = ?' ],
     related_story_id       => [ 'i.id = mctrs.object_instance_id',
                                 'mctrs.related_story__id = ?' ],
