@@ -343,7 +343,7 @@ use constant PARAM_WHERE_MAP => {
       desk_id                => 's.desk__id = ?',
       name                   => 'LOWER(i.name) LIKE LOWER(?)',
       subelement_key_name    => 'i.id = sct.object_instance_id AND sct.element_type__id = subet.id AND LOWER(subet.key_name) LIKE LOWER(?)',
-      subelement_id          => 'i.id = sse.object_instance_id AND sse.element_type__id = ?',
+      subelement_id          => 'i.id = sse.object_instance_id AND sse.active = TRUE AND sse.element_type__id = ?',
       related_story_id       => 'i.id = sctrs.object_instance_id AND sctrs.related_story__id = ?',
       related_media_id       => 'i.id = sctrm.object_instance_id AND sctrm.related_media__id = ?',
       data_text              => 'LOWER(sd.short_val) LIKE LOWER(?) AND sd.object_instance_id = i.id',
@@ -424,7 +424,7 @@ use constant PARAM_ANYWHERE_MAP => {
                                 'LOWER(e.key_name) LIKE LOWER(?)' ],
     subelement_key_name    => [ 'i.id = sct.object_instance_id AND sct.element_type__id = subet.id',
                                 'LOWER(subet.key_name) LIKE LOWER(?)' ],
-    subelement_id          => [ 'i.id = sse.object_instance_id',
+    subelement_id          => [ 'i.id = sse.object_instance_id AND sse.active = TRUE',
                                 'sse.element_type__id = ?' ],
     related_story_id       => [ 'i.id = sctrs.object_instance_id',
                                 'sctrs.related_story__id = ?' ],
